--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -27,3 +27,8 @@ jobs:
       with:
         name: playwright-traces
         path: test-results/
+    - uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
+      with:
+        name: pytest-html-report
+        path: test-results/report.html
